# lagrange-example-project

./: .gitignore  CMakeLists.txt  README.md  renovate.json
.github/workflows/: continuous.yaml
app/: CMakeLists.txt  main.cpp
cmake/: lagrange.cmake
docs/: CMakeLists.txt  Doxyfile.in  README.md
include/foo/: Bar.h  foo.h
src/: Bar.cpp  README.md  foo.cpp
tests/: CMakeLists.txt  main.cpp  test_foo.cpp
